--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
     "!build/**/*.test.*"
   ],
   "devDependencies": {
-    "@json-schema-tools/meta-schema": "^1.5.8",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.2",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "eslint": "^7.11.0",
-    "jest": "^26.6.1",
-    "ts-jest": "^26.4.2",
-    "typedoc": "^0.19.2",
-    "typescript": "^4.0.3"
+    "@json-schema-tools/meta-schema": "^1.6.10",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^14.17.3",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "eslint": "^7.28.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.6",
+    "typedoc": "^0.20.36",
+    "typescript": "4.2.4"
   },
   "dependencies": {
-    "@json-schema-tools/traverse": "^1.7.3"
+    "@json-schema-tools/traverse": "^1.7.8"
   },
   "homepage": "https://github.com/json-schema-tools/referencer#readme",
   "description": "Get a copy of a JSON Schema where all subschemas are turned into `$ref`s with corresponding definitions section."
