--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
     "!build/**/*.test.*"
   ],
   "devDependencies": {
-    "@json-schema-tools/meta-schema": "^1.6.18",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "eslint": "^7.28.0",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.6",
-    "typedoc": "^0.21.0",
-    "typescript": "4.3.5"
+    "@json-schema-tools/meta-schema": "^1.7.0",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
+    "jest": "^29.2.2",
+    "ts-jest": "^29.0.3",
+    "typedoc": "^0.23.18",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@json-schema-tools/traverse": "^1.7.8"
+    "@json-schema-tools/traverse": "^1.10.1"
   },
   "homepage": "https://github.com/json-schema-tools/referencer#readme",
   "description": "Get a copy of a JSON Schema where all subschemas are turned into `$ref`s with corresponding definitions section."
