fix: get rid of undefined issue

--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "!build/**/*.test.*"
   ],
   "devDependencies": {
+    "@json-schema-tools/dereferencer": "^1.6.2",
     "@json-schema-tools/meta-schema": "^1.7.0",
+    "@json-schema-tools/titleizer": "^1.0.8",
+    "@json-schema-tools/transpiler": "^1.10.3",
     "@types/jest": "^29.2.0",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
